--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
             <h1 class="name">Bookook seu local de descanso!</h1>
         </div>
         <div class="menu-form">
-            
+
             <nav>
+                <input type="checkbox" id="menu-hamburguer">
+                <label for="menu-hamburguer">
+                    <div class="menu-para-hamburger">
+                        <span class="hamburguer"></span>
+                    </div>
+                </label>
 
                 <ul class="menu">
                     <li><a href="#">Resenhas</a></li>
@@ -34,6 +40,7 @@
                     <li><a href="#">Gêneros</a></li>
                 </ul>
             </nav>
+
             <form class="form">
                 <div class="junte-se">
                     <h2>Junte-se</h2>
@@ -81,17 +88,20 @@
 
             <h1 class="titulo" id="titulo2">Livros nacionais</h1>
 
-            <div class="livros-nacionais">
-                <img class="imagem-livraria" src="./src/img/imagemlivraria.png" alt="">
+            <div class="livros-com-imagem-livaria">
+                <img class="imagem-livraria" src="./src/img/imagemlivraria.png" alt="imagem de uma livraria ilustrada">
 
-
-                <img src="./src/img/princesa das aguas.jpg" alt="">
-                <img src="./src/img/façaumpedido.jpg" alt="">
-                <img src="./src/img/perdida.jpg" alt="">
-                <img src="./src/img/minha-vida-fora-serie-4.jpg" alt="">
-                <img src="./src/img/um-ano-inesquecivel.jpg" alt="">
+                <div class="livros-nacionais">
+                    <img src="./src/img/princesa das aguas.jpg" alt="princesa das aguas">
+                <img src="./src/img/façaumpedido.jpg" alt="façaumpedido">
+                <img src="./src/img/perdida.jpg" alt="perdida">
+                <img src="./src/img/minha-vida-fora-serie-4.jpg" alt="minha-vida-fora-serie-4">
+                <img src="./src/img/um-ano-inesquecivel.jpg" alt="um-ano-inesquecivel">
+                </div>
+                
             </div>
         </div>
+
     </main>
     <footer class="footer">
         <h1 class="footer-titulo">Comunidade Bookook tenha uma boa leitura!</h1>
