--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>Livraria Bookook</title>
+    <title>Livraria Book Shelf</title>
 
 </head>
 
@@ -21,7 +21,7 @@
     <header class="cabecalho">
         <div class="logo-name">
             <img class="logo" src="./src/img/logo.png" alt="imagem do logo">
-            <h1 class="name">Bookook seu local de descanso!</h1>
+            <h1 class="name">Book Shelf seu local de descanso!</h1>
         </div>
         <div class="menu-form">
 
